# tensors

./: .gitignore  CMakeLists.txt  FindGINAC.cmake  README
examples/: CMakeLists.txt  doc01.cpp  doc02.cpp  ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  ex05.cpp  ex06.cpp  ex07.cpp  ex08.cpp  ex09.cpp  ex10.cpp  ex11.cpp  ex12.cpp  ex13.cpp  gen_hmat.bash  gen_hmvec.bash  gen_smat.bash  hmat.cpp  hmvec.cpp  join_f90_lines.bash  matmatmul.cpp  stiffmat.cpp  vecmatvecmul.cpp
lib/: operators.h  tensor1.h  tensor2.h  tensor3.h  tensor4.h  text.h
